--- a/stylesheets/welcome.css
+++ b/stylesheets/welcome.css
@@ -5,6 +5,8 @@
 body {
     height: 100%;
     width: 100%;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 a {
     color: inherit;
@@ -21,22 +23,19 @@ ul {
     font-family: Sans-serif, Serif;
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
     background-color: #fff;
 }
 .header {
-    width: 100%;
-    min-width: 1000px;
+    width: 1000px;
+    margin: 0px auto;
     height: 50px;
     color: #eee;
 }
 .footer {
     width: 100%;
-    height: 40px;
-    padding-top: 10px;
-    position: fixed;
-    bottom: 0px;
+    height: 180px;
+    background-color: #666699;
+    color: #333;
 }
 .footer span {
     color: #c8c8c8;
@@ -46,10 +45,8 @@ ul {
     height: 50px;
     line-height: 42px;
     margin: 10px auto;
-    padding-left: 20px;
     background-color: #666699;
     text-align: center;
-    /* border-radius: 10px; */
 }
 .nav ul {
     display: block;
@@ -68,34 +65,19 @@ ul {
     color: #333;
     cursor: pointer;
     background:
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     -webkit-linear-gradient(#f9f9f9, #e5e5e5);
 }
 #copyright {
-    height: 100%;
-    width: 1000px;
+    height: auto;
+    width: 100%;
     padding-top: 10px;
     margin: 0px auto;
     text-align: center;
-    background-color: #eee;
 }
 
 .main {
     height: auto;
-    width: 100%;
+    width: 1000px;
     margin: 0px auto;
     background-color: #fff;
 }
@@ -103,7 +85,7 @@ ul {
     width: 1000px;
     margin: 10px auto;
     overflow: hidden;
-    min-height: 600px;
+    min-height: 768px;
 }
 .main-catalog {
     float: left;
@@ -115,15 +97,13 @@ ul {
     width: 740px;
     height: auto;
     background-color: #f8f8f8;
-    border-radius: 6px;
-    margin-left: 10px;
+    margin-right: 10px;
 }
 
 div#pic {
     width: 250px;
     height: 250px;
     background-color: #eee;
-    border-radius: 10px;
     overflow: hidden;
 }
 #pic img {
@@ -141,11 +121,9 @@ div#intro {
 }
 .catalog-list {
     width: 100%;
-    border-radius: 10px;
     overflow: hidden;
     padding: 1px;
     background-color: #f8f8f8;
-    margin: 20px 0px;
 }
 .catalog-list .catalog-list-title {
     font-size: 16px;
