--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -7,6 +7,7 @@ body {
     width: 100%;
     overflow: scroll;
     overflow-x: hidden;
+    font-family:'Hiragino Sans GB','Microsoft Yahei',"WenQuanYi Micro Hei",SimSun,Tahoma,Arial,Helvetica,STHeiti;
 }
 a {
     color: inherit;
@@ -14,22 +15,28 @@ a {
 }
 ul {
     list-style-type: none;
-    font-size: 16px;
-    font-family: sans-serif;
     margin: 10px 20px;
 }
+.bluecolor {
+    color:#4078c0;
+}
+
 .container {
     font-size: 14px;
-    font-family: Sans-serif, Serif;
     width: 100%;
     height: 100%;
     background-color: #fff;
+    color: #000;
 }
 .header {
-    width: 1000px;
+    width: 100%;
     margin: 0px auto;
     height: 50px;
-    color: #eee;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 1px 0px rgba(0,0,0,0.3),0 0 6px 2px rgba(0,0,0,0.15);
+    position: fixed;
+    top: 0px;
+    left: 0px;
 }
 .footer {
     width: 100%;
@@ -44,8 +51,7 @@ ul {
     width: 1000px;
     height: 50px;
     line-height: 42px;
-    margin: 10px auto;
-    background-color: #666699;
+    margin: 0px auto;
     text-align: center;
 }
 .nav ul {
@@ -56,16 +62,18 @@ ul {
 .nav ul li {
     display: block;
     float: left;
-    width: 100px;
     text-align: center;
-    padding: 4px 0px;
+    padding: 4px 18px;
+    color: #666;
+    font-size: 14px;
+}
+.nav ul li a i{
+    font-size: 24px;
 }
 .nav ul li:hover {
-    font-size: 18px;
-    color: #333;
+    color: #4078c0;
     cursor: pointer;
-    background:
-    -webkit-linear-gradient(#f9f9f9, #e5e5e5);
+    border-bottom: 2px solid #4078c0;
 }
 #copyright {
     height: auto;
@@ -80,6 +88,7 @@ ul {
     width: 1000px;
     margin: 0px auto;
     background-color: #fff;
+    margin-top: 56px;
 }
 .main-wrapper {
     width: 1000px;
