--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -40,8 +40,8 @@ ul {
 }
 .footer {
     width: 100%;
-    height: 180px;
-    background-color: #666699;
+    /* height: 180px; */
+    /* background-color: #666699; */
     color: #333;
 }
 .footer span {
@@ -91,22 +91,23 @@ ul {
     margin-top: 56px;
 }
 .main-wrapper {
-    width: 1000px;
-    margin: 10px auto;
+    width: 100%;
+    margin: 0px auto;
     overflow: hidden;
-    min-height: 768px;
+    min-height: 568px;
 }
 .main-catalog {
     float: left;
     width: 250px;
     height: auto;
+    margin-right: 10px;
 }
 .main-content {
     float: left;
     width: 740px;
     height: auto;
     background-color: #f8f8f8;
-    margin-right: 10px;
+    /*margin-right: 10px;*/
 }
 
 div#pic {
@@ -133,6 +134,7 @@ div#intro {
     overflow: hidden;
     padding: 1px;
     background-color: #f8f8f8;
+    margin-bottom: 10px;
 }
 .catalog-list .catalog-list-title {
     font-size: 16px;
